--- a/url_short/templates/index.html
+++ b/url_short/templates/index.html
@@ -8,13 +8,14 @@
     <script src="/static/lib/angular/angular-resource.js"></script>
 
     <script src="/static/js/app.js"></script>
+    <script src="/static/js/ZeroClipboard.min.js"></script>
 
     <script src="/static/lib/jquery/jquery.min.js"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js"></script>
 
     <stylesheet src="/static/lib/bootstrap/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="/static/css/url_short.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/url_short.css"/>
 
     <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
@@ -30,6 +31,7 @@
                     <div class="input-grp">
                         <input
                             type="url"
+                            class="url"
                             placeholder="Enter URL to shorten"
                             ng-model="url_to_shorten"
                             autofocus="true"
@@ -40,6 +42,7 @@
                             class="url_to_shorten long-field"/>
                         <input
                             type="submit"
+                            class="submit"
                             value="Shorten"
                             ng-disabled="form.$invalid"
                             ng-click="shorten_url(url_to_shorten)"/>
@@ -52,18 +55,24 @@
             <p>{{shortenerror}}</p>
         </div>
         <div class="result" ng-show="result.short_url">
-            <div class="longurl" ng-show="result.long_url">
+            <!--<div class="longurl" ng-show="result.long_url">
                 <p>{{result.long_url}}</p>
-            </div>
+            </div>-->
             <div class="shorturl" ng-show="result.short_url">
-                <p>{{result.short_url}}</p>
+                <span id="short_url" class="url">
+                    {{result.short_url}}
+                </span>
+                <button
+                    class="submit"
+                    id="copy_short_url"
+                    title="Copy short URL"
+                    ng-click="copy_short_url()">Copy</button>
             </div>
         </div>
         <div class="about">
             <p>
-            <i>mijikai</i> is a high-performance URL shortener backed by redis
-            <a href="https://github.com/neeraj2608/redis-mijikai-url">Open source project</a> by <a href="https://www.github.com/neeraj2608">Neeraj Rao</a>.
-            <p>This site built with <a href="http://angularjs.org">AngularJS</a> and <a href="http://flask.pocoo.org">Flask</a></p>
+            <a href="https://github.com/neeraj2608/redis-url-shorten">Open source project</a> by <a href="https://www.github.com/neeraj2608">Neeraj Rao</a>.
+            <p>Built with <a href="http://angularjs.org">AngularJS</a> and <a href="http://flask.pocoo.org">Flask</a></p>
             </p>
         </div>
     </div> <!-- end of wrap -->
