--- a/url_short/templates/unknown.html
+++ b/url_short/templates/unknown.html
@@ -19,14 +19,14 @@
 
     <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
-<body ng-app="UrlShortener" ng-controller="ShortenController">
+<body ng-app="UrlShortener">
     <div class="wrap">
         <div class="logo">
             <h1><a href='/' class="unstyledlink">mijikai</a></h1>
             <h2>A high-performance URL shortener backed by redis</h2>
         </div>
         <div>
-            <h4>Sorry, the page you are trying to view does not exist.</h4>
+            <h4>Sorry, that is not a valid short url.</h4>
         </div>
         <div class="about">
             <p>
