--- a/url_short/templates/index.html
+++ b/url_short/templates/index.html
@@ -22,7 +22,7 @@
 <body ng-app="UrlShortener" ng-controller="ShortenController">
     <div class="wrap">
         <div class="logo">
-            <h1>mijikai</h1>
+            <h1><a href='/' class="unstyledlink">mijikai</a></h1>
             <h2>A high-performance URL shortener backed by redis</h2>
         </div>
         <div class="form">
