--- a/url_short/static/css/url_short.css
+++ b/url_short/static/css/url_short.css
@@ -36,6 +36,7 @@ h2 {
     font-family: 'PT Serif', serif;
     font-size: 20px;
     font-style: normal;
+    color: #A89F9F;
     margin: 0px;
     margin-bottom: 2%;
 }
