--- a/url_short/templates/unknown.html
+++ b/url_short/templates/unknown.html
@@ -25,7 +25,7 @@
             <h1><a href='/' class="unstyledlink">mijikai</a></h1>
             <h2>A high-performance URL shortener backed by redis</h2>
         </div>
-        <div>
+        <div class="error-block">
             <h4>Sorry, that is not a valid short url.</h4>
         </div>
         <div class="about">
